2007-04-18  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Ajout du namespace utilisé pour le resource
	binding.

2007-04-12  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stream.erl, src/client/exmpp_client_stream.erl,
	src/server/exmpp_server_stream.erl: Removed `stream_' prefix from all
	functions.

	* src/server/exmpp_server_stream.erl (features): New function to build
	a features announcement stanza.

	* testsuite/check_stream.erl, testsuite/check_legacy_auth.erl:
	Corrected a comment.

	* testsuite/check_stream.erl: Updated to use new function names in
	`exmpp_stream'.

	* src/client/exmpp_client_tls.erl, src/server/exmpp_server_tls.erl:
	New modules to deal with TLS negotiation.

	* src/client/exmpp_client_compression.erl,
	src/server/exmpp_server_compression.erl: New modules to deal with
	stream compression negotiation.

	* src/client/exmpp_client_sasl.erl, src/server/exmpp_server_sasl.erl:
	New modules to deal with SASL transport.

	* src/Makefile.am, src/Emakefile.in, ebin/Makefile.am: Connected all
	new modules to the build. Disconnected `exmpp_factory' for future
	removal.

	* src/core/exmpp_factory.erl: Removed because all code was moved to
	dedicated modules.

2007-04-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_factory.erl, src/core/exmpp_stream.erl,
	src/client/exmpp_client_stream.erl,
	src/server/exmpp_server_stream.erl, src/Makefile.am, src/Emakefile.in,
	ebin/Makefile.am, testsuite/check_factory_stream.erl,
	testsuite/Makefile.am: Moved stream handling code to dedicated
	modules.

	* testsuite/check_factory_stream.erl, testsuite/check_stream.erl,
	testsuite/Makefile.am, testsuite/Emakefile.in: Renamed test for
	`exmpp_stream'.

	* src/core/exmpp_factory.erl, src/client/exmpp_client_legacy_auth.erl,
	src/server/exmpp_server_legacy_auth.erl, src/Makefile.am,
	src/Emakefile.in, ebin/Makefile.am,
	testsuite/check_factory_legacy_auth.erl: Moved legacy authentication