@@ -1,7 +1,10 @@
 2007-04-18  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
-	* include/exmpp.hrl: Ajout du namespace utilisé pour le resource
-	binding.
+	* include/exmpp.hrl: Added resource binding namespace.
+
+	* src/client/exmpp_client_binding.erl,
+	src/server/exmpp_server_binding.erl: New modules to deal with Resource
+	Binding.
 
 2007-04-12  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
